# maestro-symphony

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.mainnet.yml  docker-compose.regtest.yml  docker-compose.yml  mise.toml
.githooks/: pre-commit  run-checks
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  new-api-route.yaml  new-indexer.yaml  new-metaprotocol-support.yaml
.github/scripts/: vars  version
.github/workflows/: audit-check.yml  audit.yml  ci.yml
docs/: openapi.json  rocksdb.md  swagger.json
docs/guides/: add-a-custom-index.md  setup-with-snapshot.md
examples/: mainnet.toml  regtest.toml  testnet.toml  testnet3_partial.toml
macros/: Cargo.toml  README.md
macros/src/: lib.rs
src/: error.rs  main.rs  shutdown.rs
src/serve/: error.rs  mod.rs  openapi.rs  reader_wrapper.rs  types.rs  utils.rs
src/serve/routes/: mod.rs  transactions.rs
src/serve/routes/addresses/: all_charm_utxos.rs  all_rune_balances.rs  all_rune_utxos.rs  mod.rs  rune_utxos.rs  runes_by_tx.rs  specific_charm_utxos.rs  specific_rune_balance.rs  specific_rune_utxos.rs  tx_count_by_address.rs  utxos_by_address.rs
src/serve/routes/charms/: charm_latest.rs  charm_util.rs  charm_value_at_utxo.rs  charms_util.rs  mod.rs
src/serve/routes/runes/: mod.rs  rune_balance_at_utxo.rs  rune_info.rs  rune_info_batch.rs
src/storage/: kv_store.rs  merge_operation.rs  mod.rs  stats_logger.rs  table.rs  timestamp.rs
src/storage/encdec/: decode.rs  encode.rs  mod.rs
src/sync/: mod.rs  pipeline.rs
src/sync/stages/: mod.rs
src/sync/stages/health/: stage.rs
src/sync/stages/index/: mod.rs  stage.rs
src/sync/stages/index/core/: mod.rs  utxo_by_txo_ref.rs
src/sync/stages/index/custom/: mod.rs
src/sync/stages/index/indexers/: mod.rs  types.rs
src/sync/stages/index/indexers/core/: hash_by_height.rs  indexer_info.rs  mod.rs  point_by_timestamp.rs  rollback_buffer.rs  timestamps.rs  utxo_by_txo_ref.rs
src/sync/stages/index/indexers/custom/: id.rs  mod.rs  tx_count_by_address.rs  utxos_by_address.rs
src/sync/stages/index/indexers/custom/charms/: indexer.rs  mod.rs  tables.rs
src/sync/stages/index/indexers/custom/runes/: indexer.rs  mod.rs  tables.rs
src/sync/stages/index/rollback/: buffer.rs
src/sync/stages/index/worker/: context.rs  mod.rs  stage.rs
src/sync/stages/pull/: mod.rs  peer.rs  peer_old.rs  peer_wip.rs  stage.rs
