[package]
name = "maestro-symphony"
version = "0.1.0"
edition = "2024"
authors = ["info@gomaestro.org"]

[dependencies]
thiserror = "2.0.12"
tempfile = "3.20.0"
rocksdb = { git = "https://github.com/maestro-org/rust-rocksdb", branch = "ts-support" }
gasket = { version = "^0.5", features = ["derive"] }
tokio = { version = "1.45.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "io-util",
] }
hex = "0.4.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
config = { version = "0.15.11", default-features = false, features = [
    "toml",
    "json",
] }
socket2 = "0.5.9"
serde = "1.0.219"
async-trait = "0.1.88"
maestro-symphony-macros = "0.1.0"
bitcoin = { version = "0.32.3", features = ["serde", "rand-std"] }
indexmap = "2.10.0"
itertools = "0.14.0"
clap = { version = "4.5.40", features = ["derive"] }
axum = "0.8.4"
axum-server = "0.7.2"
serde_json = "1.0.140"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
chrono = "0.4.41"
mini-moka = "0.10.3"
sysinfo = "0.35.2"

# runes
ordinals = "0.0.15"
bitcoincore-rpc = "0.19.0"

[workspace]
members = ["macros"]
