[package]
name = "maestro-symphony"
description = "Orchestrating Bitcoin blocks into readable harmony"
version = "0.1.1"
edition = "2024"
authors = ["info@gomaestro.org"]
license = "Apache-2.0"
repository = "https://github.com/maestro-org/maestro-symphony"
rust-version = "1.87"
documentation = "https://docs.gomaestro.org/"
categories = ["development-tools"]

[dependencies]
thiserror = "2.0.12"
tempfile = "3.20.0"
rocksdb = "0.23.0"
gasket = { version = "0.9.0", features = ["derive"] }
tokio = { version = "1.47.1", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "io-util",
    "signal",
    "time",
    "macros"
] }
hex = "0.4.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
config = { version = "0.15.13", default-features = false, features = [
    "toml",
    "json",
] }
socket2 = "0.6.0"
serde = "1.0.219"
async-trait = "0.1.88"
maestro-symphony-macros = "0.1.0"
bitcoin = { version = "0.32.3", features = ["serde", "rand-std"] }
indexmap = "2.10.0"
itertools = "0.14.0"
clap = { version = "4.5.41", features = ["derive"] }
axum = "0.8.4"
axum-server = "0.7.2"
serde_json = "1.0.142"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
chrono = "0.4.41"
mini-moka = "0.10.3"
sysinfo = "0.36.1"

# runes
ordinals = "0.0.15"
bitcoincore-rpc = "0.19.0"

[patch.crates-io]
rocksdb = { git = "https://github.com/maestro-org/rust-rocksdb.git", rev = "32b8d249021aee8f530780dff4d85f44acfe9da0" }

[workspace]
members = ["macros"]
