[package]
name = "maestro-symphony"
description = "Orchestrating Bitcoin blocks into readable harmony"
version = "0.1.4"
edition = "2024"
authors = ["info@gomaestro.org"]
license = "Apache-2.0"
repository = "https://github.com/maestro-org/maestro-symphony"
rust-version = "1.87"
documentation = "https://docs.gomaestro.org/"
categories = ["development-tools"]

[dependencies]
thiserror = "2.0.16"
tempfile = "3.22.0"
rocksdb = { version = "0.23.0", features = ["jemalloc"] }
gasket = { version = "0.9.0", features = ["derive"] }
tokio = { version = "1.47.1", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "io-util",
    "signal",
    "time",
    "macros"
] }
hex = "0.4.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
config = { version = "0.15.15", default-features = false, features = [
    "toml",
    "json",
] }
socket2 = "0.6.0"
serde = "1.0.226"
async-trait = "0.1.89"
maestro-symphony-macros = "0.1.0"
bitcoin = { version = "0.32.3", features = ["serde", "rand-std"] }
indexmap = "2.11.1"
itertools = "0.14.0"
clap = { version = "4.5.47", features = ["derive"] }
axum = "0.8.4"
axum-server = "0.7.2"
serde_json = "1.0.145"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
chrono = "0.4.42"
mini-moka = "0.10.3"
sysinfo = "0.36.1"
rustc-hash = "1.1"

# runes
ordinals = "0.0.15"
bitcoincore-rpc = "0.19.0"

[patch.crates-io]
rocksdb = { git = "https://github.com/maestro-org/rust-rocksdb.git", rev = "32b8d249021aee8f530780dff4d85f44acfe9da0" }

[workspace]
members = ["macros"]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"