[package]
name = "maestro-symphony-macros"
version = "0.1.0"
edition = "2024"
authors = ["info@gomaestro.org"]

description = "Procedural macros for the maestro-symphony project."
license = "Apache-2.0"

[dependencies]
proc-macro2 = "1.0.96"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }

[lib]
name = "maestro_symphony_macros"
proc-macro = true
